# imaging2

./: .gitignore  Assembler_8hpp-source.html  BiCgStabSolver_8hpp-source.html  BoundaryDiscretizer_8hpp-source.html  Box_8hpp-source.html  BsplineShape_8hpp-source.html  Bspline_8hpp-source.html  CMakeLists.txt  CastAccessor_8hpp-source.html  CgSolver_8hpp-source.html  Circle_8hpp-source.html  Cmessage_8hpp-source.html  Color_8hpp-source.html  CovarianceMatrixAdaptation_8hpp-source.html  DifferentiableEnergyInterface_8hpp-source.html  DifferentiableFunctionalAdaptor_8hpp-source.html  DifferentiableFunctionalInterface_8hpp-source.html  DiffusionStep_8hpp-source.html  DiscretizableShapeInterface_8hpp-source.html  Doxyfile  DummyGraphics_8hpp-source.html  ElementIntegrator_8hpp-source.html  EnergyInterface_8hpp-source.html  EquationInterface_8hpp-source.html  Exception_8hpp-source.html  FeFunctionInterface_8hpp-source.html  FemKernel_8hpp-source.html  FunctionInterface_8hpp-source.html  FunctionalAdaptor_8hpp-source.html  FunctionalInterface_8hpp-source.html  GeodesicActiveContourStep_8hpp-source.html  GraphicsInterface_8hpp-source.html  GrayValue_8hpp-source.html  Grid_8hpp-source.html  Image2Grid_8hpp-source.html  Image2Grid__impl_8hpp-source.html  ImageAccessorInterface_8hpp-source.html  ImageInterface_8hpp-source.html  Image_8hpp-source.html  InterpolationAdaptorInterface_8hpp-source.html  (+445 more)
core/: CMakeLists.txt  Cmessage.cxx  Cmessage.hpp  DifferentiableFunctionalInterface.hpp  Exception.hpp  FunctionInterface.hpp  FunctionalInterface.hpp  Makefile  MessageInterface.hpp  cio.cxx  cio.hpp  cmake_install.cmake  core.dox  distribution_utilities.cxx  distribution_utilities.hpp  float_types.hpp  gio.hpp  imaging2.hpp  matrix_utilities.cxx  matrix_utilities.hpp  utilities.cxx  utilities.hpp  vector_utilities.cxx  vector_utilities.hpp  xmlio.cxx  xmlio.hpp
doc/: install.tex
doxy/: introduction.dox
fem/: Assembler.cxx  Assembler.hpp  CMakeLists.txt  ElementIntegrator.cxx  ElementIntegrator.hpp  FeFunctionInterface.hpp  FemKernel.cxx  FemKernel.hpp  Grid.hpp  Image2Grid.cxx  Image2Grid.hpp  Image2Grid_impl.cxx  Image2Grid_impl.hpp  ShapeFunction.cxx  ShapeFunction.hpp  SimpleAssembler.hpp  Transform.cxx  Transform.hpp  cio.hpp  fem.cpp  fem.dox  fem_1d_types.hpp  fem_2d_square_types.hpp  fem_2d_triangle_types.hpp  fem_3d_cube_types.hpp  fem_3d_tetrahedra_types.hpp  gio.hpp  triangle.c  utilities.cxx  utilities.hpp
graphics/: Objects.cxx  (+9 more)
(+146 files in other folders)
